--- a/SIConsole/SIConsole.csproj
+++ b/SIConsole/SIConsole.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <StartupObject>Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Jobs\" />
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
